--- a/site.tmpl
+++ b/site.tmpl
@@ -115,6 +115,14 @@
 */ -}}
 
 </article>
+<script>
+if (location.search.match(/\beditor=/)) {
+  var js = document.createElement('script');
+  js.src = "{{ version . "static/editor.js" }}";
+  document.body.appendChild(js);
+}
+</script>
+
 {{ end }}
 
 
