--- a/src/static/main.scss
+++ b/src/static/main.scss
@@ -69,21 +69,31 @@ time, .info {
 }
 
 // editor comments
-.tooltip {
-    max-width: 50%;
-    background: rgba(0,0,0, 0.3);
-    border-radius: 10px;
-    color: white;
-    padding: 10px 15px;
+.permsel {
+    background-color: rgba(20, 50, 120, 0.2);
     position: absolute;
-    text-align: left;
-    z-index: 10;
-    transform: translate(-50%, -120%);
 }
 
-.tooltip:hover {
-    background: rgba(0,0,0, 1);
-    z-index: 11;
+.permsel:hover .tooltip {
+    display: block;
+}
+
+.tooltip {
+    display: none;
+    width: 300px;
+    background: #222;
+    border-radius: 10px;
+    color: #f5f5f5;
+    padding: 10px 15px;
+    position: relative;
+    text-align: left;
+    z-index: 10;
+    left: 50%;
+    transform: translate(-50%, calc(-100% - 15px));
+}
+
+.tooltip b {
+    color: white;
 }
 
 .tooltip::after {
@@ -96,10 +106,5 @@ time, .info {
     height: 0;
     border-width: 15px;
     border-style: solid;
-    border-color: rgba(0,0,0,0.3) transparent transparent transparent;
-}
-
-.permsel {
-    background-color: rgba(20, 50, 120, 0.2);
-    position: absolute;
+    border-color: #222 transparent transparent transparent;
 }
