upd index page to include my name lol

--- a/site.tmpl
+++ b/site.tmpl
@@ -59,7 +59,7 @@
 
 {{ define "footer" }}
   <footer>
-    &#169; 2006&ndash;2020 <a href="{{ .Rel "/about/" }}">{{ .Site.Other.Author }}</a>.
+    &#169; 2006&ndash;2020 <a href="{{ .Rel "/" }}">{{ .Site.Other.Author }}</a>.
 	{{ if eq .Url "" }} Icons from <a href="https://www.flaticon.com/">Flaticon</a>. {{ end }}
   </footer>
 </div>
