--- a/utils.tmpl
+++ b/utils.tmpl
@@ -2,8 +2,8 @@
 
 {{define "date"}}
 <meta itemprop="datePublished dateModified" content="{{ .Format "2006-01-02T15:04:05Z07:00" }}">
-<time datetime="{{ .Format "2006-01-02T15:04:05Z07:00" }}">
-  {{ .Format "2006, January 02" }}
+<time class="mono" datetime="{{ .Format "2006-01-02T15:04:05Z07:00" }}">
+  {{ .Format "2006, Jan 02" }}
 </time>
 {{end}}
 
