--- a/utils.tmpl
+++ b/utils.tmpl
@@ -2,7 +2,7 @@
 
 {{define "date"}}
 <meta itemprop="datePublished dateModified" content="{{ .Format "2006-01-02T15:04:05Z07:00" }}">
-<time class="mono" datetime="{{ .Format "2006-01-02T15:04:05Z07:00" }}">
+<time class="mono dt-published" datetime="{{ .Format "2006-01-02T15:04:05Z07:00" }}">
   {{ .Format "2006, Jan 02" }}
 </time>
 {{end}}
