--- a/site.tmpl
+++ b/site.tmpl
@@ -18,7 +18,7 @@
         title="{{ .Site.Other.Title }} russian posts" href="http://solovyov.net/blog.atom">
   <link rel="alternate" type="application/atom+xml"
         title="{{ .Site.Other.Title }} english posts" href="http://solovyov.net/en.atom">
-  <title>{{ .Site.Other.Title }}{{ if .Title }}: {{ .Title }}{{ end }}</title>
+  <title>{{ if .Other.Fulltitle }}{{ .Other.Fulltitle}}{{ else }}{{ .Site.Other.Title }}{{ if .Title }}: {{ .Title }}{{ end }}{{ end }}</title>
 
   {{ if .Other.Img }}
   <meta property="og:image" content="{{ .Other.Img }}">
