--- a/src/static/blog.css
+++ b/src/static/blog.css
@@ -1,16 +1,13 @@
 *,*::before,*::after{box-sizing:border-box}ul[class],ol[class]{padding:0}body,h1,h2,h3,h4,p,ul[class],ol[class],figure,blockquote,dl,dd{margin:0}html{scroll-behavior:smooth}body{min-height:100vh;text-rendering:optimizeLegibility;line-height:1.5}ul[class],ol[class]{list-style:none}a:not([class]){text-decoration-skip-ink:auto}img{max-width:100%;display:block}article>*+*{margin-top:1em}input,button,textarea,select{font:inherit}@media(prefers-reduced-motion:reduce){*{animation-duration:.01ms !important;animation-iteration-count:1 !important;transition-duration:.01ms !important;scroll-behavior:auto !important}}
 
 
-html {
-  font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
-  font-size: calc(14px + .25vw);
-  color: #333;
-}
-
 body {
   margin: auto;
-  max-width: 40rem;
+  max-width: 50rem;
   padding: 0 15px 15px;
+  font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
+  font-size: 1.1rem;
+  color: #333;
 }
 
 h1, h2, h3, h4 {
@@ -40,6 +37,7 @@ pre, code, .mono {
 
 pre, code {
   background-color: #fafafa;
+  font-size: 0.8rem;
 }
 
 pre {
