preparing for netlify

--- a/site.tmpl
+++ b/site.tmpl
@@ -24,7 +24,7 @@
   <meta property="og:image" content="{{ version . "static/logo.png" }}">
   {{ end }}
 
-  <link rel="author" href="http://solovyov.net/about/">
+  <link rel="author" href="https://solovyov.net/about/">
 
   <link rel="openid2.provider" href="https://openid.stackexchange.com/openid/provider">
   <link rel="openid2.local_id" href="https://openid.stackexchange.com/user/76e7488b-6c80-4941-8f5a-0e4ba7c6b592">
@@ -48,7 +48,7 @@
   <header>
     <h2 id="title"><a href="/">solovyov.net</a></h2>
     <ul class="top-icons">
-      <li><a href="http://twitter.com/asolovyov" class="icon" title="Twitter">
+      <li><a href="https://twitter.com/asolovyov" class="icon" title="Twitter">
         <svg class="icon"><use xlink:href="{{ version . "static/icons.svg" }}#twitter"/></svg>
       </a></li>
       <li><a href="https://github.com/piranha" class="icon" title="Github">
@@ -83,7 +83,7 @@
 <script src="{{ version . "static/highlight.pack.js" }}"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
-<article itemscope itemtype="http://schema.org/BlogPosting" class="h-entry">
+<article itemscope itemtype="https://schema.org/BlogPosting" class="h-entry">
   <meta itemprop="mainEntityOfPage" content=".">
 
   <header>
@@ -124,7 +124,7 @@ if (location.search.match(/\beditor=/)) {
 <footer>
 <a href="{{ .Rel "/" }}">Back to index</a> |
 Subscribe with
-<a href="http://solovyov.net/{{ if starts "/en" .FullPath }}en.atom{{ else }}blog.atom{{ end }}">RSS
+<a href="https://solovyov.net/{{ if starts "/en" .FullPath }}en.atom{{ else }}blog.atom{{ end }}">RSS
   <svg class="small-icon"><use xlink:href="{{ version . "static/icons.svg" }}#rss"></svg></a>
 </footer>
 
