--- a/site.tmpl
+++ b/site.tmpl
@@ -80,9 +80,6 @@
 
 
 {{ define "post" }}
-<script src="{{ version . "static/highlight.pack.js" }}"></script>
-<script>hljs.initHighlightingOnLoad();</script>
-
 <article itemscope itemtype="https://schema.org/BlogPosting" class="h-entry">
   <meta itemprop="mainEntityOfPage" content=".">
 
@@ -128,6 +125,7 @@ Subscribe with
   <svg class="small-icon"><use xlink:href="{{ version . "static/icons.svg" }}#rss"></svg></a>
 </footer>
 
+<script src="{{ version . "static/highlight.pack.js" }}" async defer onload="hljs.initHighlighting()"></script>
 {{ end }}
 
 
