--- a/src/static/blog.css
+++ b/src/static/blog.css
@@ -31,7 +31,7 @@ p, blockquote, table, hr, dl, ul, ol, pre, address, figure {
 }
 
 pre, code, .mono {
-  font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: Menlo, Monaco, Consolas, "Liberation Mono", monospace;
 }
 
 pre, code {
@@ -41,8 +41,10 @@ pre, code {
 
 pre {
   padding: .5rem;
-  line-height: 1.25;
   overflow-x: scroll;
+  border: 1px solid #f2f2f2;
+  border-radius: 4px;
+  box-shadow: 0 1px 1px rgba(0,0,0,.125);
 }
 
 img, canvas, iframe, video, svg, select, textarea {
