--- a/src/static/highlight-github.css
+++ b/src/static/highlight-github.css
@@ -8,7 +8,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
   overflow-x: auto;
   padding: 0.5em;
   color: #333;
-  background: #f8f8f8;
+  background: #fafafa;
   -webkit-text-size-adjust: none;
 }
 .hljs-comment,
