fix tags layout

--- a/site.tmpl
+++ b/site.tmpl
@@ -127,7 +127,7 @@ Subscribe with
 
 
 {{define "tag"}}
-# Pages tagged with {{ .Title }}
+<h1>Pages tagged with {{ .Title }}</h1>
 
 {{ range .Site.Pages.WithTag .Title }}
 <div class="mb5">
