--- a/slides.tmpl
+++ b/slides.tmpl
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/remark/0.14.0/remark.min.js" type="text/javascript"></script>
+  <script src="https://remarkjs.com/downloads/remark-0.15.0.min.js" type="text/javascript"></script>
   <link href="https://highlightjs.org/static/demo/styles/github.css"  rel="stylesheet">
   <style type="text/css">
   .hljs-github .hljs { background: inherit; }
@@ -148,17 +148,11 @@
     }
   }
   </style>
-  <title>{{ .Content | cut "\n# " "\n" }}</title>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-317760-3', 'auto');
-    ga('send', 'pageview');
-    setTimeout(ga, 15000, 'send', 'event', 'read', '15_seconds');
-  </script>
+  <title>{{ with .Content | cut "\ntitle: *" "\n" }}{{ . }}{{ else }}{{ .Content | cut "\n# " "\n" }}{{ end }}</title>
+  <meta name="author" content="Alexander Solovyov">
+  <meta name="keywords" content="alexander solovyov, piranha, kasta, clojure, python, emacs, blog">
+  <meta name="description" content="{{ .Content | cut "\ndescription: " "\n" }}">
+  {{ .Content | cut "<!--head" "-->" }}
 </head>
 <body>
   <textarea id="source">
@@ -166,6 +160,7 @@
 {{ .Content }}
 
 </textarea>
+  {{ .Content | cut "<!--body" "-->" }}
 </body>
 </html>
 {{ end }}
