--- a/src/static/blog.css
+++ b/src/static/blog.css
@@ -125,8 +125,9 @@ h1 a:hover {
   text-decoration: none;
 }
 
-h1 a.u-url { display: none; }
-h1:hover a.u-url { display: inline; }
+a.u-url { display: none; user-select: none; }
+a.u-url::before { content: " "; }
+h1:hover a.u-url, h2:hover a.u-url, h3:hover a.u-url { display: inline; }
 
 
 /* Utility */
