--- a/site.tmpl
+++ b/site.tmpl
@@ -40,7 +40,7 @@
   <link rel="openid2.local_id" href="https://openid.stackexchange.com/user/76e7488b-6c80-4941-8f5a-0e4ba7c6b592">
 
   <link rel="stylesheet" type="text/css" href="{{ version . "static/blog.css" }}">
-  <link rel="icon" href="{{ "favicon.ico" | version (.Site.Pages.ByPath "index.html") | cut "^." "$" }}" type="image/x-icon" />
+  <link rel="icon" href="{{ "static/favicon.svg" | version (.Site.Pages.ByPath "index.html") | cut "^." "$" }}" type="image/svg+xml" />
   {{/* <script async src="{{ version . "static/stuff.js" }}"></script> */}}
   <script data-goatcounter="https://sn.goatcounter.com/count" src="//gc.zgo.at/count.js" async></script>
 </head>
