do not style u-url, it could be somewhere else

--- a/site.tmpl
+++ b/site.tmpl
@@ -85,7 +85,7 @@
     <h1>
       {{- .Title -}}
       {{- if .Other.Draft }} <span class="cg">(draft)</span>{{ end -}}
-      <a href="/{{ .Url }}" class="u-url">#</a>
+      <a href="/{{ .Url }}" class="u-url self-target">#</a>
     </h1>
 
     <div class="cg">
