add link to youtube channel

--- a/site.tmpl
+++ b/site.tmpl
@@ -54,6 +54,9 @@
       <li><a href="https://github.com/piranha" class="icon" title="Github">
         <svg class="icon"><use xlink:href="{{ version . "static/icons.svg" }}#github"/></svg>
       </a></li>
+      <li><a href="https://www.youtube.com/c/asolovyov" class="icon" title="Youtube">
+        <svg class="icon"><use xlink:href="{{ version . "static/icons.svg" }}#youtube"/></svg>
+      </a></li>
       <li><a href="https://solovyov.net/blog.atom" class="icon" title="RSS">
         <svg class="icon"><use xlink:href="{{ version . "static/icons.svg" }}#rss"/></svg>
       </a></li>
