--- a/site.tmpl
+++ b/site.tmpl
@@ -110,6 +110,21 @@
 
 <hr class="mt mb">
 
+<div id="discourse-comments"></div>
+
+<script type="text/javascript">
+  window.DiscourseEmbed = {
+    discourseUrl: "https://talk.solovyov.net/",
+    discourseEmbedUrl: "{{ .Site.Other.Url }}{{ .Url }}"
+  };
+
+  (function() {
+    var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
+    d.src = DiscourseEmbed.discourseUrl + 'javascripts/embed.js';
+    document.head.appendChild(d);
+  })();
+</script>
+
 <div>
 <div>
   <a href="https://solovyov.net/blog.atom" title="RSS">
