--- a/src/static/blog.css
+++ b/src/static/blog.css
@@ -154,6 +154,9 @@ h1:hover .self-target, h2:hover .self-target, h3:hover .self-target { display: i
 .blue { color: blue; }
 .grey { color: grey; }
 
+.float-left { float: left; }
+.float-right { float: right; }
+
 
 /* editor.js comments */
 
