css special class for images in posts

--- a/src/static/blog.css
+++ b/src/static/blog.css
@@ -129,6 +129,17 @@ h1 a:hover {
 .self-target::before { content: " "; }
 h1:hover .self-target, h2:hover .self-target, h3:hover .self-target { display: inline; }
 
+.image {
+    margin: 0 auto;
+}
+
+@media (min-width: 640px) {
+    .image {
+        margin-left: 1rem;
+        float: right;
+        max-width: 400px;
+    }
+}
 
 /* Utility */
 
