--- a/site.tmpl
+++ b/site.tmpl
@@ -101,7 +101,7 @@
     </div>
   </header>
 
-  <div id="content">{{ .Content }}</div>
+  <div id="post">{{ .Content }}</div>
 
   <div class="right">
     {{ template "date" .Date }}
@@ -146,7 +146,7 @@
 <script>
 if (location.search.match(/\beditor=/)) {
   var js = document.createElement('script');
-  js.dataset.selector = '#content';
+  js.dataset.selector = '#post';
   js.src = "{{ version . "static/editor.js" }}";
   document.body.appendChild(js);
 }
