--- a/src/static/blog.css
+++ b/src/static/blog.css
@@ -64,7 +64,8 @@ footer {
 /* Custom styles */
 
 body > header {
-  margin: 0.5rem 0 1.5rem;
+  max-width: 50rem;
+  margin: 0.5rem auto 1.5rem;
   display: flex;
   justify-content: space-between;
 }
@@ -130,15 +131,51 @@ h1 a:hover {
 h1:hover .self-target, h2:hover .self-target, h3:hover .self-target { display: inline; }
 
 #post img, #post iframe {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 @media (min-width: 640px) {
-    #post img, #post iframe {
-        margin-left: 1rem;
-        float: right;
-        max-width: 400px;
-    }
+  #post img, #post iframe {
+    margin-left: 1rem;
+    float: right;
+    max-width: 400px;
+    max-height: 300px;
+  }
+}
+
+
+/* cover */
+
+#post > img:first-child, #post > p:first-child > img:first-child {
+  margin: 0;
+  float: none;
+
+  position: relative;
+  left: -15px; /* body padding */
+  width: 100vw;
+  max-width: 100vw;
+  height: 50vh;
+  max-height: 50vh;
+
+  object-fit: cover;
+  z-index: -1;
+  filter: brightness(0.5);
+}
+
+@media (min-width: 50rem) {
+  #post > img:first-child, #post > p:first-child > img:first-child {
+    left: calc((-100vw + 50rem) / 2 - 15px);
+  }
+}
+
+header.cover {
+  position: absolute;
+  bottom: calc(50vh - 60px); /* 60px is header height + margin */
+}
+
+header.cover, header.cover .grey, header.cover a {
+  color: white;
+  text-shadow: 1px 1px 2px black;
 }
 
 /* Utility */
@@ -166,49 +203,49 @@ h1:hover .self-target, h2:hover .self-target, h3:hover .self-target { display: i
 .grey { color: grey; }
 
 @media (min-width: 640px) {
-    .float-left { float: left; }
-    .float-right { float: right; }
+  .float-left { float: left; }
+  .float-right { float: right; }
 }
 
 
 /* editor.js comments */
 
 .permsel {
-    background-color: rgba(20, 50, 120, 0.2);
-    position: absolute;
+  background-color: rgba(20, 50, 120, 0.2);
+  position: absolute;
 }
 
 .permsel:hover .tooltip {
-    display: block;
+  display: block;
 }
 
 .tooltip {
-    display: none;
-    width: 300px;
-    background: #222;
-    border-radius: 10px;
-    color: #f5f5f5;
-    padding: 10px 15px;
-    position: relative;
-    text-align: left;
-    z-index: 10;
-    left: 50%;
-    transform: translate(-50%, calc(-100% - 15px));
+  display: none;
+  width: 300px;
+  background: #222;
+  border-radius: 10px;
+  color: #f5f5f5;
+  padding: 10px 15px;
+  position: relative;
+  text-align: left;
+  z-index: 10;
+  left: 50%;
+  transform: translate(-50%, calc(-100% - 15px));
 }
 
 .tooltip b {
-    color: white;
+  color: white;
 }
 
 .tooltip::after {
-    content: '';
-    position: absolute;
-    display: block;
-    top: 100%;
-    left: 50%;
-    width: 0;
-    height: 0;
-    border-width: 15px;
-    border-style: solid;
-    border-color: #222 transparent transparent transparent;
+  content: '';
+  position: absolute;
+  display: block;
+  top: 100%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  border-width: 15px;
+  border-style: solid;
+  border-color: #222 transparent transparent transparent;
 }
